# ipymario

./: .gitignore  README.md  demo.ipynb  pyproject.toml  widget.css  widget.js
src/ipymario/: __init__.py
src/ipymario/static/: widget.js
