[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipymario"
version = "0.0.0"
dependencies = ["anywidget", "numpy"]
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]
